[workspace]
members = ["core", "desktop/src-tauri"]
resolver = "2"

[workspace.dependencies]
eyre = { git = "https://github.com/thewh1teagle/eyre", branch = "feat/report-serialize-backtrace", features = [
	"serialize",
] }
serde_json = "1.0"

# https://v1.tauri.app/v1/guides/building/app-size/#rust-build-time-optimizations
[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
