[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.14", features = ["derive"] }
tokio = { version = "1.35.1", features = ["tokio-macros", "macros", "rt", "rt-multi-thread"] }
env_logger = "0.10.1"
vibe = {path = "../core"}
anyhow = "1.0.79"

[[bin]]
name = "cli"
path = "src/main.rs"

