[package]
name = "vibe_core"
version = "0.0.6"
edition = "2021"

[lib]
name = "vibe_core"
path = "src/lib.rs"

[dependencies]
# Fixed incorrect timestamps, better logs
whisper-rs = { git = "https://github.com/thewh1teagle/whisper-rs.git", features = [
	"whisper-cpp-tracing",
], default-features = false, branch = "dev" }
serde = { version = "1.0.195", features = ["derive"] }
num = "0.4.1"
once_cell = "1.19.0"
which = "6.0.1"
tracing = { version = "0.1.40", features = ["log"] }
eyre = { workspace = true }
hound = "3.5.1"
reqwest = { version = "0.11.23", features = ["stream"] }
tempfile = "3.9.0"
chrono = "0.4.38"
tokio = { version = "1.35.1", features = [
	"tokio-macros",
	"macros",
	"rt",
	"rt-multi-thread",
] }
serde_json = { workspace = true }
futures-util = "0.3.30"
pyannote-rs = "0.2.7"

[dev-dependencies]

serial_test = "3.1.1"
tracing-test = "0.2.5"

[build-dependencies]
glob = "0.3.1"

[features]
default = []
coreml = ["whisper-rs/coreml", "pyannote-rs/coreml"]
directml = ["pyannote-rs/directml"]
openblas = ["whisper-rs/openblas"]
metal = ["whisper-rs/metal"]
vulkan = ["whisper-rs/vulkan"]
