[package]
name = "vibe"
version = "0.0.6"
description = "Vibe"
authors = ["@thewh1teagle"]
license = "MIT"
repository = "https://github.com/thewh1teagle/vibe"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }

# Plugins
tauri-plugin-window-state = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-store = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-keepawake = "0.1.1"
# Unsafe headers required for Ollama (to set Origin)
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }

serde_json = { workspace = true }
eyre = { workspace = true }

tokio = { version = "1.35.1", features = ["net"] }
once_cell = "1.19.0"
serde = { version = "^1.0.198", features = ["derive"] }
url = "2.5.0"
open = "5.1.3"
showfile = "0.1.1"
futures = "0.3.30"
cpal = "0.15.3"
hound = "3.5.1"
rand = "0.8.5"

# Log
tracing = { version = "0.1.40", features = ["log"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
glob = "0.3.1"

chrono = "0.4.38"
crash-handler = "0.6.2"
urlencoding = "2.1.3"

# Linux
[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10.68", features = ["vendored"] }

# Windows
[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"

# macOS
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"
screencapturekit = { version = "0.2.8", features = ["ci"] }
screencapturekit-sys = "0.2.8"
objc_id = "0.1"
core-graphics-helmer-fork = "0.24.0"
