[package]
name = "vibe"
version = "0.0.6"
description = "Vibe"
authors = ["@thewh1teagle"]
license = "MIT"
repository = "https://github.com/thewh1teagle/vibe"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }

# Plugins
tauri-plugin-window-state = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-store = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-keepawake = { version = "0.1.1", optional = true }
tauri-plugin-aptabase = { git = "https://github.com/thewh1teagle/tauri-plugin-aptabase", branch = "deterministic-daily-session" }
# Unsafe headers required for Ollama (to set Origin)
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }

serde_json = { workspace = true }
eyre = { workspace = true }

tokio = { version = "1.49.0", features = ["net", "fs", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["io"] }
once_cell = "1.21.3"
serde = { version = "^1.0.228", features = ["derive"] }
url = "2.5.8"
showfile = "0.1.1"
futures = "0.3.31"
futures-util = "0.3"
cpal = "0.17.1"
hound = "3.5.1"
rand = "0.9.2"

# HTTP client for sona communication and downloads
reqwest = { version = "0.13", features = ["multipart", "stream", "json"] }

# Log
tracing = { version = "0.1.44", features = ["log"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
glob = "0.3.3"

chrono = "0.4.43"
crash-handler = "0.7.0"
urlencoding = "2.1.3"
bytemuck = "1.24.0"
which = "8"
enigo = "0.3"

# Linux
[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10.75", features = ["vendored"] }

# Windows
[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
# Used to attach to console
windows = { version = "0.62.2", features = [
	"Win32_System_Console",
	"Win32_Foundation",
] }
# Used to redirect stdout/stderr from c++ to the attached console
libc = "0.2.180"
libc-stdhandle = "=0.1.0"

# macOS
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.1"

[features]
default = []
keepawake = ["dep:tauri-plugin-keepawake"]
